k8s/manifests/payments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments
  namespace: sns
  labels:
    app: payments
spec:
  selector:
    matchLabels:
      app: payments
  replicas: 1
  template:
    metadata:
      labels:
        app: payments
    spec:
      containers:
        - name: payments
          image: sns-payments
          resources:
            requests:
              cpu: 50m
              memory: 20Mi
            limits:
              cpu: 75m
              memory: 50Mi
          readinessProbe:
            initialDelaySeconds: 20
            httpGet:
              path: /system/readiness
              port: 3000
          livenessProbe:
            initialDelaySeconds: 20
            httpGet:
              path: /system/liveness
              port: 3000
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: payments-config-volume
              mountPath: /opt/sns/app/config/config.production.json
              subPath: config.production.json
      volumes:
        - name: payments-config-volume
          configMap: 
            name: payments-configmap
            items:
              - key: config.production.json
                path: config.production.json
---
apiVersion: v1
kind: Service
metadata:
  name: payments
  namespace: sns
  labels:
    app: payments
spec:
  ports:
    - port: 3000
      nodePort: 32555
  selector:
    app: payments
  type: NodePort
