k8s/manifests/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: sns
  labels:
    app: redis
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis
          resources:
            requests:
              cpu: 50m
              memory: 10Mi
            limits:
              cpu: 75m
              memory: 20Mi
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-config-files
              readOnly: true
              mountPath: /usr/local/etc/redis/
      volumes:
        - name: redis-config-files
          hostPath: 
            path: /data/
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: sns
  labels:
    app: redis
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis
