k8s/manifests/subscriptions.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subscriptions
  namespace: sns
  labels:
    app: subscriptions
spec:
  selector:
    matchLabels:
      app: subscriptions
  replicas: 1
  template:
    metadata:
      labels:
        app: subscriptions
    spec:
      containers:
        - name: subscriptions
          image: sns-subscriptions
          resources:
            requests:
              cpu: 50m
              memory: 20Mi
            limits:
              cpu: 75m
              memory: 50Mi
          readinessProbe:
            initialDelaySeconds: 20
            httpGet:
              path: /system/readiness
              port: 3001
          livenessProbe:
            initialDelaySeconds: 20
            httpGet:
              path: /system/liveness
              port: 3001
          ports:
            - containerPort: 3001
          volumeMounts:
            - name: subscriptions-config-volume
              mountPath: /opt/sns/app/config/config.production.json
              subPath: config.production.json
      volumes:
        - name: subscriptions-config-volume
          configMap: 
            name: subscriptions-configmap
---
apiVersion: v1
kind: Service
metadata:
  name: subscriptions
  namespace: sns
  labels:
    app: subscriptions
spec:
  ports:
    - port: 3001
  selector:
    app: subscriptions
